meta/yang/y.output

state 0
	$accept: .module $end 

	kywd_module  shift 3
	.  error

	module  goto 1
	module_def  goto 2

state 1
	$accept:  module.$end 

	$end  accept
	.  error


state 2
	module:  module_def.module_stmts revision_stmt module_body_stmts token_curly_close 

	kywd_namespace  shift 6
	kywd_description  shift 10
	kywd_prefix  shift 9
	kywd_import  shift 11
	.  error

	module_stmts  goto 4
	description  goto 7
	module_stmt  goto 5
	import_stmt  goto 8

state 3
	module_def:  kywd_module.token_ident token_curly_open 

	token_ident  shift 12
	.  error


state 4
	module:  module_def module_stmts.revision_stmt module_body_stmts token_curly_close 
	module_stmts:  module_stmts.module_stmt token_semi 

	kywd_namespace  shift 6
	kywd_description  shift 10
	kywd_revision  shift 16
	kywd_prefix  shift 9
	kywd_import  shift 11
	.  error

	revision_stmt  goto 13
	revision_def  goto 15
	description  goto 7
	module_stmt  goto 14
	import_stmt  goto 8

state 5
	module_stmts:  module_stmt.token_semi 

	token_semi  shift 17
	.  error


state 6
	module_stmt:  kywd_namespace.token_string 

	token_string  shift 18
	.  error


state 7
	module_stmt:  description.    (10)

	.  reduce 10 (src line 159)


state 8
	module_stmt:  import_stmt.    (11)

	.  reduce 11 (src line 160)


state 9
	module_stmt:  kywd_prefix.token_string 

	token_string  shift 19
	.  error


state 10
	description:  kywd_description.token_string 

	token_string  shift 20
	.  error


state 11
	import_stmt:  kywd_import.token_ident 

	token_ident  shift 21
	.  error


state 12
	module_def:  kywd_module token_ident.token_curly_open 

	token_curly_open  shift 22
	.  error


state 13
	module:  module_def module_stmts revision_stmt.module_body_stmts token_curly_close 

	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_rpc  shift 39
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  error

	module_body_stmts  goto 23
	module_body_stmt  goto 24
	rpc_stmt  goto 25
	body_stmt  goto 26
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	rpc_def  goto 27
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 14
	module_stmts:  module_stmts module_stmt.token_semi 

	token_semi  shift 61
	.  error


state 15
	revision_stmt:  revision_def.token_semi 
	revision_stmt:  revision_def.token_curly_open description token_semi token_curly_close 

	token_curly_open  shift 63
	token_semi  shift 62
	.  error


state 16
	revision_def:  kywd_revision.token_rev_ident 

	token_rev_ident  shift 64
	.  error


state 17
	module_stmts:  module_stmt token_semi.    (7)

	.  reduce 7 (src line 149)


state 18
	module_stmt:  kywd_namespace token_string.    (9)

	.  reduce 9 (src line 154)


state 19
	module_stmt:  kywd_prefix token_string.    (12)

	.  reduce 12 (src line 161)


state 20
	description:  kywd_description token_string.    (6)

	.  reduce 6 (src line 145)


state 21
	import_stmt:  kywd_import token_ident.    (13)

	.  reduce 13 (src line 166)


state 22
	module_def:  kywd_module token_ident token_curly_open.    (2)

	.  reduce 2 (src line 123)


state 23
	module:  module_def module_stmts revision_stmt module_body_stmts.token_curly_close 
	module_body_stmts:  module_body_stmts.module_body_stmt 

	token_curly_close  shift 65
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_rpc  shift 39
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  error

	module_body_stmt  goto 66
	rpc_stmt  goto 25
	body_stmt  goto 26
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	rpc_def  goto 27
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 24
	module_body_stmts:  module_body_stmt.    (16)

	.  reduce 16 (src line 184)


state 25
	module_body_stmt:  rpc_stmt.    (14)

	.  reduce 14 (src line 180)


state 26
	module_body_stmt:  body_stmt.    (15)

	.  reduce 15 (src line 182)


state 27
	rpc_stmt:  rpc_def.token_curly_open optional_rpc_body_stmts token_curly_close 

	token_curly_open  shift 67
	.  error


state 28
	body_stmt:  typedef_stmt.    (20)

	.  reduce 20 (src line 192)


state 29
	body_stmt:  grouping_stmt.    (21)

	.  reduce 21 (src line 194)


state 30
	body_stmt:  list_stmt.    (22)

	.  reduce 22 (src line 195)


state 31
	body_stmt:  container_stmt.    (23)

	.  reduce 23 (src line 196)


state 32
	body_stmt:  leaf_stmt.    (24)

	.  reduce 24 (src line 197)


state 33
	body_stmt:  leaf_list_stmt.    (25)

	.  reduce 25 (src line 198)


state 34
	body_stmt:  anyxml_stmt.    (26)

	.  reduce 26 (src line 199)


state 35
	body_stmt:  uses_stmt.    (27)

	.  reduce 27 (src line 200)


state 36
	body_stmt:  choice_stmt.    (28)

	.  reduce 28 (src line 201)


state 37
	body_stmt:  action_stmt.    (29)

	.  reduce 29 (src line 202)


state 38
	body_stmt:  notification_stmt.    (30)

	.  reduce 30 (src line 203)


state 39
	rpc_def:  kywd_rpc.token_ident 

	token_ident  shift 68
	.  error


state 40
	typedef_stmt:  typedef_def.token_curly_open typedef_stmt_body token_curly_close 

	token_curly_open  shift 69
	.  error


state 41
	grouping_stmt:  grouping_def.grouping_body_defined 

	token_curly_open  shift 71
	.  error

	grouping_body_defined  goto 70

state 42
	list_stmt:  list_def.token_curly_open optional_list_body_stmts token_curly_close 

	token_curly_open  shift 72
	.  error


state 43
	container_stmt:  container_def.token_curly_open optional_container_body_stmts token_curly_close 

	token_curly_open  shift 73
	.  error


state 44
	leaf_stmt:  leaf_def.token_curly_open optional_leaf_body_stmts token_curly_close 

	token_curly_open  shift 74
	.  error


state 45
	leaf_list_stmt:  leaf_list_def.token_curly_open optional_leaf_body_stmts token_curly_close 

	token_curly_open  shift 75
	.  error


state 46
	anyxml_stmt:  anyxml_def.token_semi 

	token_semi  shift 76
	.  error


state 47
	uses_stmt:  kywd_uses.token_ident token_semi 

	token_ident  shift 77
	.  error


state 48
	choice_stmt:  choice_def.token_curly_open choice_stmt_body token_curly_close 

	token_curly_open  shift 78
	.  error


state 49
	action_stmt:  action_def.token_curly_open optional_action_body_stmts token_curly_close 

	token_curly_open  shift 79
	.  error


state 50
	notification_stmt:  notification_def.token_curly_open optional_notification_body_stmts token_curly_close 

	token_curly_open  shift 80
	.  error


state 51
	typedef_def:  kywd_typedef.token_ident 

	token_ident  shift 81
	.  error


state 52
	grouping_def:  kywd_grouping.token_ident 

	token_ident  shift 82
	.  error


state 53
	list_def:  kywd_list.token_ident 

	token_ident  shift 83
	.  error


state 54
	container_def:  kywd_container.token_ident 

	token_ident  shift 84
	.  error


state 55
	leaf_def:  kywd_leaf.token_ident 

	token_ident  shift 85
	.  error


state 56
	leaf_list_def:  kywd_leaf_list.token_ident 

	token_ident  shift 86
	.  error


state 57
	anyxml_def:  kywd_anyxml.token_ident 

	token_ident  shift 87
	.  error


state 58
	choice_def:  kywd_choice.token_ident 

	token_ident  shift 88
	.  error


state 59
	action_def:  kywd_action.token_ident 

	token_ident  shift 89
	.  error


state 60
	notification_def:  kywd_notification.token_ident 

	token_ident  shift 90
	.  error


state 61
	module_stmts:  module_stmts module_stmt token_semi.    (8)

	.  reduce 8 (src line 151)


state 62
	revision_stmt:  revision_def token_semi.    (4)

	.  reduce 4 (src line 137)


state 63
	revision_stmt:  revision_def token_curly_open.description token_semi token_curly_close 

	kywd_description  shift 10
	.  error

	description  goto 91

state 64
	revision_def:  kywd_revision token_rev_ident.    (3)

	.  reduce 3 (src line 129)


state 65
	module:  module_def module_stmts revision_stmt module_body_stmts token_curly_close.    (1)

	.  reduce 1 (src line 116)


state 66
	module_body_stmts:  module_body_stmts module_body_stmt.    (17)

	.  reduce 17 (src line 186)


state 67
	rpc_stmt:  rpc_def token_curly_open.optional_rpc_body_stmts token_curly_close 
	optional_rpc_body_stmts: .    (70)

	kywd_description  shift 10
	kywd_input  shift 100
	kywd_output  shift 101
	kywd_reference  shift 99
	.  reduce 70 (src line 359)

	description  goto 95
	optional_rpc_body_stmts  goto 92
	rpc_body_stmts  goto 93
	rpc_body_stmt  goto 94
	reference_stmt  goto 96
	rpc_input  goto 97
	rpc_output  goto 98

state 68
	rpc_def:  kywd_rpc token_ident.    (69)

	.  reduce 69 (src line 354)


state 69
	typedef_stmt:  typedef_def token_curly_open.typedef_stmt_body token_curly_close 

	kywd_description  shift 10
	kywd_type  shift 109
	kywd_default  shift 108
	.  error

	description  goto 105
	typedef_stmt_body  goto 102
	typedef_stmt_body_stmt  goto 103
	type_stmt  goto 104
	default_stmt  goto 106
	type_stmt_def  goto 107

state 70
	grouping_stmt:  grouping_def grouping_body_defined.    (100)

	.  reduce 100 (src line 465)


state 71
	grouping_body_defined:  token_curly_open.grouping_body_stmts token_curly_close 

	kywd_description  shift 10
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_reference  shift 99
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  error

	description  goto 112
	body_stmt  goto 114
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	reference_stmt  goto 113
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	grouping_body_stmts  goto 110
	grouping_body_stmt  goto 111
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 72
	list_stmt:  list_def token_curly_open.optional_list_body_stmts token_curly_close 

	kywd_description  shift 10
	kywd_key  shift 127
	kywd_config  shift 125
	kywd_uses  shift 47
	kywd_unique  shift 123
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_mandatory  shift 126
	kywd_leaf_list  shift 56
	kywd_max_elements  shift 119
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  error

	description  goto 118
	body_stmt  goto 124
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	config_stmt  goto 120
	mandatory_stmt  goto 121
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	optional_list_body_stmts  goto 115
	list_body_stmts  goto 116
	list_body_stmt  goto 117
	key_stmt  goto 122
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 73
	container_stmt:  container_def token_curly_open.optional_container_body_stmts token_curly_close 
	optional_container_body_stmts: .    (59)

	kywd_description  shift 10
	kywd_config  shift 125
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_mandatory  shift 126
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 59 (src line 321)

	description  goto 131
	body_stmt  goto 134
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	container_body_stmts  goto 129
	typedef_def  goto 40
	container_def  goto 43
	optional_container_body_stmts  goto 128
	container_body_stmt  goto 130
	config_stmt  goto 132
	mandatory_stmt  goto 133
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 74
	leaf_stmt:  leaf_def token_curly_open.optional_leaf_body_stmts token_curly_close 

	kywd_description  shift 10
	kywd_type  shift 109
	kywd_default  shift 108
	kywd_config  shift 125
	kywd_mandatory  shift 126
	.  error

	description  goto 139
	type_stmt  goto 138
	default_stmt  goto 142
	type_stmt_def  goto 107
	config_stmt  goto 140
	mandatory_stmt  goto 141
	optional_leaf_body_stmts  goto 135
	leaf_body_stmts  goto 136
	leaf_body_stmt  goto 137

state 75
	leaf_list_stmt:  leaf_list_def token_curly_open.optional_leaf_body_stmts token_curly_close 

	kywd_description  shift 10
	kywd_type  shift 109
	kywd_default  shift 108
	kywd_config  shift 125
	kywd_mandatory  shift 126
	.  error

	description  goto 139
	type_stmt  goto 138
	default_stmt  goto 142
	type_stmt_def  goto 107
	config_stmt  goto 140
	mandatory_stmt  goto 141
	optional_leaf_body_stmts  goto 143
	leaf_body_stmts  goto 136
	leaf_body_stmt  goto 137

state 76
	anyxml_stmt:  anyxml_def token_semi.    (121)

	.  reduce 121 (src line 532)


state 77
	uses_stmt:  kywd_uses token_ident.token_semi 

	token_semi  shift 144
	.  error


state 78
	choice_stmt:  choice_def token_curly_open.choice_stmt_body token_curly_close 
	choice_stmt_body: .    (34)

	kywd_description  shift 10
	kywd_case  shift 150
	.  reduce 34 (src line 218)

	description  goto 146
	choice_stmt_body  goto 145
	case_stmts  goto 147
	case_stmt  goto 148
	case_def  goto 149

state 79
	action_stmt:  action_def token_curly_open.optional_action_body_stmts token_curly_close 
	optional_action_body_stmts: .    (82)

	kywd_description  shift 10
	kywd_input  shift 158
	kywd_output  shift 159
	kywd_reference  shift 99
	.  reduce 82 (src line 405)

	description  goto 154
	reference_stmt  goto 155
	optional_action_body_stmts  goto 151
	action_body_stmts  goto 152
	action_body_stmt  goto 153
	action_input  goto 156
	action_output  goto 157

state 80
	notification_stmt:  notification_def token_curly_open.optional_notification_body_stmts token_curly_close 
	optional_notification_body_stmts: .    (94)

	kywd_description  shift 10
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 94 (src line 452)

	description  goto 163
	body_stmt  goto 164
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	action_def  goto 49
	notification_def  goto 50
	optional_notification_body_stmts  goto 160
	notification_body_stmts  goto 161
	notification_body_stmt  goto 162
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 81
	typedef_def:  kywd_typedef token_ident.    (43)

	.  reduce 43 (src line 255)


state 82
	grouping_def:  kywd_grouping token_ident.    (102)

	.  reduce 102 (src line 478)


state 83
	list_def:  kywd_list token_ident.    (109)

	.  reduce 109 (src line 501)


state 84
	container_def:  kywd_container token_ident.    (58)

	.  reduce 58 (src line 316)


state 85
	leaf_def:  kywd_leaf token_ident.    (124)

	.  reduce 124 (src line 554)


state 86
	leaf_list_def:  kywd_leaf_list token_ident.    (136)

	.  reduce 136 (src line 604)


state 87
	anyxml_def:  kywd_anyxml token_ident.    (122)

	.  reduce 122 (src line 539)


state 88
	choice_def:  kywd_choice token_ident.    (37)

	.  reduce 37 (src line 223)


state 89
	action_def:  kywd_action token_ident.    (81)

	.  reduce 81 (src line 400)


state 90
	notification_def:  kywd_notification token_ident.    (93)

	.  reduce 93 (src line 447)


state 91
	revision_stmt:  revision_def token_curly_open description.token_semi token_curly_close 

	token_semi  shift 165
	.  error


state 92
	rpc_stmt:  rpc_def token_curly_open optional_rpc_body_stmts.token_curly_close 

	token_curly_close  shift 166
	.  error


state 93
	optional_rpc_body_stmts:  rpc_body_stmts.    (71)
	rpc_body_stmts:  rpc_body_stmts.rpc_body_stmt 

	kywd_description  shift 10
	kywd_input  shift 100
	kywd_output  shift 101
	kywd_reference  shift 99
	.  reduce 71 (src line 361)

	description  goto 95
	rpc_body_stmt  goto 167
	reference_stmt  goto 96
	rpc_input  goto 97
	rpc_output  goto 98

state 94
	rpc_body_stmts:  rpc_body_stmt.    (72)

	.  reduce 72 (src line 363)


state 95
	rpc_body_stmt:  description.token_semi 

	token_semi  shift 168
	.  error


state 96
	rpc_body_stmt:  reference_stmt.    (75)

	.  reduce 75 (src line 368)


state 97
	rpc_body_stmt:  rpc_input.optional_body_stmts token_curly_close 
	optional_body_stmts: .    (18)

	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 18 (src line 188)

	body_stmt  goto 171
	optional_body_stmts  goto 169
	body_stmts  goto 170
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 98
	rpc_body_stmt:  rpc_output.optional_body_stmts token_curly_close 
	optional_body_stmts: .    (18)

	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 18 (src line 188)

	body_stmt  goto 171
	optional_body_stmts  goto 172
	body_stmts  goto 170
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 99
	reference_stmt:  kywd_reference.token_string token_semi 

	token_string  shift 173
	.  error


state 100
	rpc_input:  kywd_input.token_curly_open 

	token_curly_open  shift 174
	.  error


state 101
	rpc_output:  kywd_output.token_curly_open 

	token_curly_open  shift 175
	.  error


state 102
	typedef_stmt:  typedef_def token_curly_open typedef_stmt_body.token_curly_close 
	typedef_stmt_body:  typedef_stmt_body.typedef_stmt_body_stmt 

	token_curly_close  shift 176
	kywd_description  shift 10
	kywd_type  shift 109
	kywd_default  shift 108
	.  error

	description  goto 105
	typedef_stmt_body_stmt  goto 177
	type_stmt  goto 104
	default_stmt  goto 106
	type_stmt_def  goto 107

state 103
	typedef_stmt_body:  typedef_stmt_body_stmt.    (44)

	.  reduce 44 (src line 260)


state 104
	typedef_stmt_body_stmt:  type_stmt.    (46)

	.  reduce 46 (src line 265)


state 105
	typedef_stmt_body_stmt:  description.token_semi 

	token_semi  shift 178
	.  error


state 106
	typedef_stmt_body_stmt:  default_stmt.    (48)

	.  reduce 48 (src line 268)


state 107
	type_stmt:  type_stmt_def.type_stmt_body 

	token_curly_open  shift 181
	token_semi  shift 180
	.  error

	type_stmt_body  goto 179

state 108
	default_stmt:  kywd_default.token_string token_semi 

	token_string  shift 182
	.  error


state 109
	type_stmt_def:  kywd_type.token_ident 

	token_ident  shift 183
	.  error


state 110
	grouping_body_defined:  token_curly_open grouping_body_stmts.token_curly_close 
	grouping_body_stmts:  grouping_body_stmts.grouping_body_stmt 

	token_curly_close  shift 184
	kywd_description  shift 10
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_reference  shift 99
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  error

	description  goto 112
	body_stmt  goto 114
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	reference_stmt  goto 113
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	grouping_body_stmt  goto 185
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 111
	grouping_body_stmts:  grouping_body_stmt.    (103)

	.  reduce 103 (src line 483)


state 112
	grouping_body_stmt:  description.token_semi 

	token_semi  shift 186
	.  error


state 113
	grouping_body_stmt:  reference_stmt.    (106)

	.  reduce 106 (src line 489)


state 114
	grouping_body_stmt:  body_stmt.    (107)

	.  reduce 107 (src line 490)


state 115
	list_stmt:  list_def token_curly_open optional_list_body_stmts.token_curly_close 

	token_curly_close  shift 187
	.  error


state 116
	optional_list_body_stmts:  list_body_stmts.    (110)
	list_body_stmts:  list_body_stmts.list_body_stmt 

	kywd_description  shift 10
	kywd_key  shift 127
	kywd_config  shift 125
	kywd_uses  shift 47
	kywd_unique  shift 123
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_mandatory  shift 126
	kywd_leaf_list  shift 56
	kywd_max_elements  shift 119
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 110 (src line 506)

	description  goto 118
	body_stmt  goto 124
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	config_stmt  goto 120
	mandatory_stmt  goto 121
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	list_body_stmt  goto 188
	key_stmt  goto 122
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 117
	list_body_stmts:  list_body_stmt.    (111)

	.  reduce 111 (src line 510)


state 118
	list_body_stmt:  description.token_semi 

	token_semi  shift 189
	.  error


state 119
	list_body_stmt:  kywd_max_elements.token_int token_semi 

	token_int  shift 190
	.  error


state 120
	list_body_stmt:  config_stmt.    (115)

	.  reduce 115 (src line 517)


state 121
	list_body_stmt:  mandatory_stmt.    (116)

	.  reduce 116 (src line 518)


state 122
	list_body_stmt:  key_stmt.    (117)

	.  reduce 117 (src line 519)


state 123
	list_body_stmt:  kywd_unique.token_string token_semi 

	token_string  shift 191
	.  error


state 124
	list_body_stmt:  body_stmt.    (119)

	.  reduce 119 (src line 521)


state 125
	config_stmt:  kywd_config.token_string token_semi 

	token_string  shift 192
	.  error


state 126
	mandatory_stmt:  kywd_mandatory.token_string token_semi 

	token_string  shift 193
	.  error


state 127
	key_stmt:  kywd_key.token_string token_semi 

	token_string  shift 194
	.  error


state 128
	container_stmt:  container_def token_curly_open optional_container_body_stmts.token_curly_close 

	token_curly_close  shift 195
	.  error


state 129
	optional_container_body_stmts:  container_body_stmts.    (60)
	container_body_stmts:  container_body_stmts.container_body_stmt 

	kywd_description  shift 10
	kywd_config  shift 125
	kywd_uses  shift 47
	kywd_container  shift 54
	kywd_list  shift 53
	kywd_notification  shift 60
	kywd_typedef  shift 51
	kywd_grouping  shift 52
	kywd_leaf  shift 55
	kywd_mandatory  shift 126
	kywd_leaf_list  shift 56
	kywd_choice  shift 58
	kywd_action  shift 59
	kywd_anyxml  shift 57
	.  reduce 60 (src line 323)

	description  goto 131
	body_stmt  goto 134
	typedef_stmt  goto 28
	grouping_stmt  goto 29
	list_stmt  goto 30
	container_stmt  goto 31
	leaf_stmt  goto 32
	leaf_list_stmt  goto 33
	anyxml_stmt  goto 34
	uses_stmt  goto 35
	choice_stmt  goto 36
	action_stmt  goto 37
	notification_stmt  goto 38
	choice_def  goto 48
	typedef_def  goto 40
	container_def  goto 43
	container_body_stmt  goto 196
	config_stmt  goto 132
	mandatory_stmt  goto 133
	action_def  goto 49
	notification_def  goto 50
	grouping_def  goto 41
	list_def  goto 42
	anyxml_def  goto 46
	leaf_def  goto 44
	leaf_list_def  goto 45

state 130
	container_body_stmts:  container_body_stmt.    (61)

	.  reduce 61 (src line 325)


state 131
	container_body_stmt:  description.token_semi 

	token_semi  shift 197
	.  error


state 132
	container_body_stmt:  config_stmt.    (64)

	.  reduce 64 (src line 331)


state 133
	container_body_stmt:  mandatory_stmt.    (65)

	.  reduce 65 (src line 332)


state 134
	container_body_stmt:  body_stmt.    (66)

	.  reduce 66 (src line 333)


state 135
	leaf_stmt:  leaf_def token_curly_open optional_leaf_body_stmts.token_curly_close 

	token_curly_close  shift 198
	.  error


state 136
	optional_leaf_body_stmts:  leaf_body_stmts.    (125)
	leaf_body_stmts:  leaf_body_stmts.leaf_body_stmt 

	kywd_description  shift 10
	kywd_type  shift 109
	kywd_default  shift 108
	kywd_config  shift 125
	kywd_mandatory  shift 126
	.  reduce 125 (src line 559)

	description  goto 139
	type_stmt  goto 138
	default_stmt  goto 142
	type_stmt_def  goto 107
	config_stmt  goto 140
	mandatory_stmt  goto 141
	leaf_body_stmt  goto 199

state 137
	leaf_body_stmts:  leaf_body_stmt.    (126)

	.  reduce 126 (src line 563)


state 138
	leaf_body_stmt:  type_stmt.    (128)

	.  reduce 128 (src line 568)


state 139
	leaf_body_stmt:  description.token_semi 

	token_semi  shift 200
	.  error


state 140
	leaf_body_stmt:  config_stmt.    (130)

	.  reduce 130 (src line 571)


state 141
	leaf_body_stmt:  mandatory_stmt.    (131)

	.  reduce 131 (src line 572)


state 142
	leaf_body_stmt:  default_stmt.    (132)

	.  reduce 132 (src line 573)


state 143
	leaf_list_stmt:  leaf_list_def token_curly_open optional_leaf_body_stmts.token_curly_close 

	token_curly_close  shift 201
	.  error


state 144
	uses_stmt:  kywd_uses token_ident token_semi.    (67)

	.  reduce 67 (src line 335)


state 145
	choice_stmt:  choice_def token_curly_open choice_stmt_body.token_curly_close 

	token_curly_close  shift 202
	.  error


state 146
	choice_stmt_body:  description.token_semi 

	token_semi  shift 203
	.  error


state 147
	choice_stmt_body:  case_stmts.    (36)
	case_stmts:  case_stmts.case_stmt 

	kywd_case  shift 150
	.  reduce 36 (src line 221)

	case_stmt  goto 204
	case_def  goto 149

state 148
	case_stmts:  case_stmt.    (38)

	.  reduce 38 (src line 228)


state 149
	case_stmt:  case_def.token_curly_open container_body_stmts token_curly_close 

	token_curly_open  shift 205
	.  error


state 150
	case_def:  kywd_case.token_ident 

	token_ident  shift 206
	.  error


state 151
	action_stmt:  action_def token_curly_open optional_action_body_stmts.token_curly_close 

	token_curly_close  shift 207
	.  error


state 152
	optional_action_body_stmts:  action_body_stmts.    (83)
	action_body_stmts:  action_body_stmts.action_body_stmt 

	kywd_description  shift 10
	kywd_input  shift 158
	kywd_output  shift 159
	kywd_reference  shift 99
	.  reduce 83 (src line 407)

	description  goto 154
	reference_stmt  goto 155
	action_body_stmt  goto 208
	action_input  goto 156
	action_output  goto 157

state 153
	action_body_stmts:  action_body_stmt.    (84)

	.  reduce 84 (src line 409)


state 154
	action_body_stmt:  description.token_semi 

	token_semi  shift 209
	.  error


state 155
	action_body_stmt:  reference_stmt.    (87)
